fixed animation on mobile

--- a/css/mobileLandscape.css
+++ b/css/mobileLandscape.css
@@ -100,6 +100,11 @@ div ul li{
 	margin-right:0%;
 }
 
+.showDiv {
+	-webkit-transition: none;
+  	transition:         none; 
+}
+
 
 .content {
 	margin-left:7%;
