--- a/css/style.css
+++ b/css/style.css
@@ -183,8 +183,6 @@ a:hover {
 	left:0;
 	top:0;
 	width:auto;
-	-webkit-transition: all 300ms cubic-bezier(0.165, 0.84, 0.44, 1);
-  	transition:         all 300ms cubic-bezier(0.165, 0.84, 0.44, 1); 
 }
 
 header {
